--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 </head>
 
 <body>
+  
+  <div class="container-hide">
+    <div class="row" id="flexContainer">
+      <div class="col-md-12"> 	  
+        <p class="pull-left hidden-xs"><i class="fa fa-clock-o"></i><span>Mon - Sat 8.00 - 18.00. Sunday CLOSED</span></p>
+        <p class="pull-right"><i class="fa fa-phone-square  green-icon"></i>Tel No. (+001) 123-456-789</p>
+      </div>
+    </div>
+</div>
+
   <header class="myheader" id="myheader">
     <nav class="mynavbar mycontainer">
       <div class="mynavbar-inner">
